gogs/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: git
  name: git
  namespace: devops
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
    - name: ssh
      port: 22
      protocol: TCP
      targetPort: 22
  selector:
    app: git
