gogs/VirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: git
  namespace: istio-system
spec:
  gateways:
    - timeqt-gateway
  hosts:
    - git.timeqt.com
  http:
    - route:
        - destination:
            host: git.devops.svc.cluster.local
            port:
              number: 3000
  tcp:
    - route:
        - destination:
            host: git.devops.svc.cluster.local
            port:
              number: 22
      match:
        - port: 22
